[package]
name = "Quanto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "sqlite", "mysql", "postgres" ] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
